# rust-yaml

./: .gitignore  .gitleaks.toml  .gitmessage  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets.baseline  .yamllint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GitVersion.yml  Makefile  README.md  SECURITY.md  cliff.toml  codecov.yml  committed.toml  mise.toml  package-lock.json  package.json
.cargo/: config.toml
.githooks/: commit-msg
.github/: CACHING.md  PUBLISHING.md  PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/actions/bot-setup/: action.yml
.github/actions/setup-cargo-tools/: action.yml
.github/actions/setup-rust-cache/: action.yml
.github/scripts/: create-docs-pages.sh
.github/workflows/: bench.yml  cargo-cache-warmup.yml  ci.yml  commitlint.yml  docs.yml  fuzz.yml  linters.yml  release.yml
benches/: advanced_features.rs  comment_preservation.rs  dumping.rs  parsing.rs  performance.rs  performance_regression.rs  profiling.rs  schema_validation.rs  serde_dump.rs  serde_load.rs  streaming.rs  zero_copy.rs  zero_copy_performance.rs
benches/fixtures/: config_large.yaml
docs/: BENCHMARK_RESULTS.md  CODECOV_SETUP.md  COMPARISON.md  DEVELOPMENT.md  DIRECTIVES.md  DOCS_RS_FIX.md  MERGE_KEYS.md  MIGRATION_GUIDE.md  PRE_COMMIT.md  PROFILING.md  PROFILING_REPORT.md  ROADMAP.md  SERDE_INTEGRATION_DESIGN.md  STREAMING.md  TAG_SYSTEM.md  VERSION_MANAGEMENT.md  YAML_1.2.2_COMPLIANCE.md  YAML_CONFORMANCE_ROADMAP.md  YAML_TEST_SUITE.md  ZERO_COPY.md
examples/: advanced_schema_demo.rs  comment_preservation_demo.rs  round_trip.rs  yaml_write_example.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: load_str.rs  load_str_strict.rs  roundtrip.rs
scripts/: check-docs-build.sh  publish-and-check-docs.sh
src/: composer.rs  composer_borrowed.rs  composer_comments.rs  composer_optimized.rs  constructor.rs  emitter.rs  error.rs  lib.rs  limits.rs  profiling.rs  resolver.rs  schema.rs  streaming_async.rs  streaming_enhanced.rs  tag.rs  value.rs  value_borrowed.rs  version.rs  yaml.rs
src/parser/: mod.rs  streaming.rs
src/scanner/: indentation.rs  mod.rs  scalar_scanner.rs
src/serde_integration/: de.rs  error.rs  mod.rs  ser.rs  value.rs
tests/: comment_preservation_tests.rs  directives.rs  edge_cases_and_errors.rs  flow_indent_bug.rs  indentation_style_preservation.rs  integration_tests.rs  panic_resistance.rs  security_limits.rs  serde_integration.rs  tag_tests.rs  unit_tests.rs
yaml-test-suite/: Cargo.toml
yaml-test-suite/src/: data_case.rs  diff.rs  escape.rs  event_tree.rs  lib.rs  runner.rs
yaml-test-suite/tests/: yaml_test_suite.rs
