[package]
name = "yaml-test-suite"
description = "Conformance harness driving the upstream yaml/yaml-test-suite against rust-yaml (dev-only, not published)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

repository = "https://github.com/elioetibr/rust-yaml"
publish = false
autobins = false
autoexamples = false
autobenches = false

[dependencies]
rust-yaml = { path = ".." }

[dev-dependencies]
tempfile = "3.8"
